# ibis-analytics

./: .gitignore  LICENSE  README.md  Taskfile.dist.yaml  app.py  config.toml  dashboard.ipynb  dashboard.py  dashboard.qmd  dev-requirements.txt  docs_hack.py  drop_dbs.py  eda.py  eda.qmd  functions.py  ibis-metrics.ipynb  index.html  justfile  metrics.py  pyproject.toml  readme.md  requirements.txt  search.json  temp.sh  transform.py
.github/workflows/: cicd.yaml  docs.yaml  etl-docs.yaml  etl.yaml  temp.yaml
.streamlit/: config.toml
dag/: __init__.py  backup.py  deploy.py  functions.py  graphql_queries.py  ingest.py  jobs.py  postprocess.py
dag/assets/: __init__.py
dag/assets/extract/: backends.py  docs.py  github.py  pypi.py  zulip.py
dag/assets/load/: backends.py  docs.py  github.py  pypi.py  zulip.py
dag/assets/transform/: backends.py  docs.py  github.py  pypi.py  zulip.py
dag/resources/: table_io_managers.py
pages/: 0_github.py  1_pypi.py  2_docs.py  2_zulip.py  3_about.py  3_docs.py  4_about.py
site_libs/bootstrap/: bootstrap.min.css
src/: export_az.py  export_md.py  ingest_az.py  ingest_ci.py  ingest_docs.py  ingest_gh.py  ingest_pypi.py
src/ibis_analytics/: catalog.py  cli.py  config.py  metrics.py  plots.py  tables.py
src/ibis_analytics/etl/: __init__.py  extract.py  load.py  (+2 more)
v2/: config.toml  justfile  requirements.txt
v2/.streamlit/: config.toml
v2/dag/: __init__.py  backup.py  constants.py  functions.py  ingest.py  jobs.py  load.py
v2/pages/: 0_github.py  1_pypi.py  2_docs.py  3_about.py
website/: _quarto.yml  index.qmd
(+8 files in other folders)
